# Highlightly

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: index.md
docs/getting_started/: installation.md  overview.md
