[tool.poetry]
name = "highlightly"
version = "0.1.1"
description = "Automatic clips generation"
authors = ["yureehh <fabbri.juri@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [
    { include = "**/*" }
]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.0.1"
commitizen = "^4.1.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs|
    \.git|
    \.hg|
    \.mypy_cache|
    \.nox|
    \.tox|
    \.venv|
    _build|
    buck-out|
    build|
    dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8-docstrings]
docstring-convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
